--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,9 @@ spring:
     url: jdbc:mysql://localhost:3306/library
     username: root
     password: root
+  threads:
+    virtual:
+      enabled: true
 
 server:
   port: 8080
